--- a/src/com/bmazurkiewicz01/client/view/main.fxml
+++ b/src/com/bmazurkiewicz01/client/view/main.fxml
@@ -16,8 +16,8 @@
 <AnchorPane fx:id="root" prefHeight="600.0" prefWidth="800.0" styleClass="root" xmlns="http://javafx.com/javafx/11"
             xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.bmazurkiewicz01.client.controller.MainController">
     <stylesheets>
-        <URL value="@../css/appStyle.css"/>
-        <URL value="@../css/mainStyle.css"/>
+        <URL value="@../../../../resources/css/app-style.css"/>
+        <URL value="@../../../../resources/css/main-style.css"/>
     </stylesheets>
     <TableView fx:id="roomTableView" layoutX="25.0" layoutY="75.0" onMouseClicked="#handleRowClick" prefHeight="506.0"
                prefWidth="751.0">
@@ -44,7 +44,7 @@
     </TableView>
     <ImageView fx:id="minimizeButton" fitHeight="24.0" fitWidth="24.0" layoutX="718.0" layoutY="16.0"
                styleClass="minimizeButton">
-        <Image url="@../../../../resources/minimize_icon.png"/>
+        <Image url="@../../../../resources/icons/minimize_icon.png"/>
     </ImageView>
     <Label fx:id="helloLabel" alignment="CENTER" layoutX="276.0" layoutY="11.0" prefHeight="58.0" prefWidth="227.0"
            styleClass="helloLabel" text="Hello, User!">
@@ -54,7 +54,7 @@
     </Label>
     <ImageView fx:id="closeButton" fitHeight="24.0" fitWidth="24.0" layoutX="751.0" layoutY="16.0"
                styleClass="closeButton">
-        <Image url="@../../../../resources/close_icon.png"/>
+        <Image url="@../../../../resources/icons/close_icon.png"/>
     </ImageView>
     <Label fx:id="errorLabel" layoutX="190.0" layoutY="558.0" prefHeight="27.0" prefWidth="420.0"
            style="-fx-text-alignment: center; -fx-alignment: center;" text="Label" textFill="RED" visible="false">
