--- a/src/com/bmazurkiewicz01/client/view/register.fxml
+++ b/src/com/bmazurkiewicz01/client/view/register.fxml
@@ -73,18 +73,18 @@
         <ImageView fx:id="minimizeButton" styleClass="minimizeButton" fitHeight="24.0" fitWidth="24.0" layoutX="718.0"
                    layoutY="16.0">
             <image>
-                <Image url="@../../../../resources/minimize_icon.png"/>
+                <Image url="@../../../../resources/icons/minimize_icon.png"/>
             </image>
         </ImageView>
         <ImageView fx:id="closeButton" styleClass="closeButton" fitHeight="24.0" fitWidth="24.0" layoutX="751.0"
                    layoutY="16.0">
             <image>
-                <Image url="@../../../../resources/close_icon.png"/>
+                <Image url="@../../../../resources/icons/close_icon.png"/>
             </image>
         </ImageView>
     </children>
     <stylesheets>
-        <URL value="@../css/appStyle.css"/>
-        <URL value="@../css/registerStyle.css"/>
+        <URL value="@../../../../resources/css/app-style.css"/>
+        <URL value="@../../../../resources/css/register-style.css"/>
     </stylesheets>
 </AnchorPane>
