--- a/src/com/bmazurkiewicz01/client/view/room.fxml
+++ b/src/com/bmazurkiewicz01/client/view/room.fxml
@@ -64,7 +64,7 @@
     <ImageView fx:id="minimizeButton" fitHeight="24.0" fitWidth="24.0" layoutX="718.0" layoutY="16.0"
                styleClass="minimizeButton">
         <image>
-            <Image url="@../../../../resources/minimize_icon.png"/>
+            <Image url="@../../../../resources/icons/minimize_icon.png"/>
         </image>
     </ImageView>
     <ListView fx:id="usersListView" layoutX="45.0" layoutY="100.0" prefHeight="455.0" prefWidth="160.0"
@@ -72,7 +72,7 @@
     <ImageView fx:id="closeButton" fitHeight="24.0" fitWidth="24.0" layoutX="751.0" layoutY="16.0"
                styleClass="closeButton">
         <image>
-            <Image url="@../../../../resources/close_icon.png"/>
+            <Image url="@../../../../resources/icons/close_icon.png"/>
         </image>
     </ImageView>
 
@@ -105,8 +105,8 @@
     </AnchorPane>
 
     <stylesheets>
-        <URL value="@../css/appStyle.css"/>
-        <URL value="@../css/roomStyle.css"/>
+        <URL value="@../../../../resources/css/app-style.css"/>
+        <URL value="@../../../../resources/css/room-style.css"/>
     </stylesheets>
 
 </AnchorPane>
