--- a/src/com/bmazurkiewicz01/client/view/userPropertiesValidation.fxml
+++ b/src/com/bmazurkiewicz01/client/view/userPropertiesValidation.fxml
@@ -41,14 +41,14 @@
         <ImageView fx:id="closeButton" fitHeight="24.0" fitWidth="24.0" layoutX="303.0" layoutY="16.0"
                    styleClass="closeButton">
             <image>
-                <Image url="@../../../../resources/close_icon.png"/>
+                <Image url="@../../../../resources/icons/close_icon.png"/>
             </image>
         </ImageView>
         <Label fx:id="errorLabel" alignment="CENTER" layoutX="42.0" layoutY="152.0" minWidth="-Infinity"
                prefHeight="18.0" prefWidth="276.0" text="Label" textFill="RED" visible="false"/>
     </children>
     <stylesheets>
-        <URL value="@../css/appStyle.css"/>
-        <URL value="@../css/userPropertiesValidationStyle.css"/>
+        <URL value="@../../../../resources/css/app-style.css"/>
+        <URL value="@../../../../resources/css/user-properties-validation-style.css"/>
     </stylesheets>
 </AnchorPane>
