--- a/src/resources/css/app-style.css
+++ b/src/resources/css/app-style.css
@@ -3,26 +3,26 @@
     -fx-background-radius: 25;
 }
 .closeButton {
-    -fx-image: url("../../../../resources/close_icon.png");
+    -fx-image: url("../icons/close_icon.png");
 }
 .closeButton:hover {
-    -fx-image: url("../../../../resources/close_icon_hover.png");
+    -fx-image: url("../icons/close_icon_hover.png");
 }
 .minimizeButton {
-    -fx-image: url("../../../../resources/minimize_icon.png");
+    -fx-image: url("../icons/minimize_icon.png");
 }
 .minimizeButton:hover {
-    -fx-image: url("../../../../resources/minimize_icon_hover.png");
+    -fx-image: url("../icons/minimize_icon_hover.png");
 }
 .hamburgerButton {
     -fx-background-color: transparent;
-    -fx-background-image: url("../../../../resources/hamburger_icon.png");
+    -fx-background-image: url("../icons/hamburger_icon.png");
     -fx-background-size: 32px 32px;
     -fx-background-repeat: no-repeat;
     -fx-background-position: center;
 }
 .hamburgerButton:hover {
-    -fx-background-image: url("../../../../resources/hamburger_icon_hover.png");
+    -fx-background-image: url("../icons/hamburger_icon_hover.png");
 }
 .leftPane {
     -fx-background-color: rgba(51, 51, 51, 0.6);
