--- a/src/resources/css/room-style.css
+++ b/src/resources/css/room-style.css
@@ -73,6 +73,17 @@
 .chatTextArea .scroll-pane .content{
     -fx-background-color: transparent;
 }
+.removeRoomButton {
+    -fx-background-color: rgba(0, 0, 0, 0.05);
+    -fx-background-image: url("../icons/remove_room_icon.png");
+    -fx-background-size: 32px 32px;
+    -fx-background-repeat: no-repeat;
+    -fx-background-position: left;
+    -fx-text-fill: white;
+}
+.removeRoomButton:hover {
+    -fx-background-color: rgba(0, 0, 0, 0.25);
+}
 .logoutButton {
     -fx-background-color: rgba(0, 0, 0, 0.05);
     -fx-background-image: url("../icons/logout_icon.png");
